Prevent line breaks for key terms using nowrap class

--- a/style.css
+++ b/style.css
@@ -64,6 +64,10 @@ h3 {
     color: var(--primary-color);
 }
 
+.nowrap {
+    white-space: nowrap;
+}
+
 /* Navbar */
 .navbar {
     display: flex;
